# Zotero2Markdown

./: .gitignore  LICENSE  MANIFEST.in  README.md  check_db.py  check_tags.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
src/zotero2md/: bibtex_exporter.py  config.py  csv_exporter.py  database.py  exporter.py  item_filter.py  json_exporter.py  logger.py  main.py  notion_exporter.py  obsidian_exporter.py  parallel_exporter.py  parser.py  query_cache.py
templates/: default.md  logseq.md  obsidian.md
tests/: test_bibtex_exporter.py  test_csv_exporter.py  test_json_exporter.py
